// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array helpers: append() emits proper changes 1`] = `
Array [
  Object {
    "newValue": 1,
    "oldValue": undefined,
    "prop": "1",
  },
  Object {
    "newValue": 2,
    "oldValue": undefined,
    "prop": "2",
  },
  Object {
    "newValue": 3,
    "oldValue": 1,
    "prop": "length",
  },
  Object {
    "newValue": Array [
      0,
      1,
      2,
    ],
    "oldValue": Array [
      0,
    ],
    "prop": null,
  },
]
`;

exports[`Array helpers: concat() emits proper changes 1`] = `
Array [
  Object {
    "newValue": 2,
    "oldValue": undefined,
    "prop": "1",
  },
  Object {
    "newValue": 3,
    "oldValue": undefined,
    "prop": "2",
  },
  Object {
    "newValue": 4,
    "oldValue": undefined,
    "prop": "3",
  },
  Object {
    "newValue": 4,
    "oldValue": 1,
    "prop": "length",
  },
  Object {
    "newValue": Array [
      1,
      2,
      3,
      4,
    ],
    "oldValue": Array [
      1,
    ],
    "prop": null,
  },
]
`;

exports[`Array helpers: insert() emits proper changes 1`] = `
Array [
  Object {
    "newValue": 2,
    "oldValue": 4,
    "prop": "1",
  },
  Object {
    "newValue": 3,
    "oldValue": undefined,
    "prop": "2",
  },
  Object {
    "newValue": 4,
    "oldValue": undefined,
    "prop": "3",
  },
  Object {
    "newValue": 4,
    "oldValue": 2,
    "prop": "length",
  },
  Object {
    "newValue": Array [
      1,
      2,
      3,
      4,
    ],
    "oldValue": Array [
      1,
      4,
    ],
    "prop": null,
  },
]
`;

exports[`Array helpers: prepend() emits proper changes 1`] = `
Array [
  Object {
    "newValue": 1,
    "oldValue": 0,
    "prop": "0",
  },
  Object {
    "newValue": 2,
    "oldValue": undefined,
    "prop": "1",
  },
  Object {
    "newValue": 0,
    "oldValue": undefined,
    "prop": "2",
  },
  Object {
    "newValue": 3,
    "oldValue": 1,
    "prop": "length",
  },
  Object {
    "newValue": Array [
      1,
      2,
      0,
    ],
    "oldValue": Array [
      0,
    ],
    "prop": null,
  },
]
`;

exports[`Array helpers: remove() emits proper changes 1`] = `
Array [
  Object {
    "newValue": 4,
    "oldValue": 2,
    "prop": "1",
  },
  Object {
    "deleted": true,
    "oldValue": 3,
    "prop": "2",
  },
  Object {
    "deleted": true,
    "oldValue": 4,
    "prop": "3",
  },
  Object {
    "newValue": 2,
    "oldValue": 4,
    "prop": "length",
  },
  Object {
    "newValue": Array [
      1,
      4,
    ],
    "oldValue": Array [
      1,
      2,
      3,
      4,
    ],
    "prop": null,
  },
]
`;

exports[`Revising an array: push() emits proper changes 1`] = `
Array [
  Object {
    "newValue": 1,
    "oldValue": undefined,
    "prop": "1",
  },
  Object {
    "newValue": 2,
    "oldValue": undefined,
    "prop": "2",
  },
  Object {
    "newValue": 3,
    "oldValue": 1,
    "prop": "length",
  },
  Object {
    "newValue": Array [
      0,
      1,
      2,
    ],
    "oldValue": Array [
      0,
    ],
    "prop": null,
  },
]
`;

exports[`Revising an array: splice() emits proper changes 1`] = `
Array [
  Object {
    "newValue": 0,
    "oldValue": 1,
    "prop": "1",
  },
  Object {
    "newValue": 0,
    "oldValue": 2,
    "prop": "2",
  },
  Object {
    "newValue": 5,
    "oldValue": 3,
    "prop": "3",
  },
  Object {
    "deleted": true,
    "oldValue": 4,
    "prop": "4",
  },
  Object {
    "deleted": true,
    "oldValue": 5,
    "prop": "5",
  },
  Object {
    "newValue": 4,
    "oldValue": 6,
    "prop": "length",
  },
  Object {
    "newValue": Array [
      0,
      0,
      0,
      5,
    ],
    "oldValue": Array [
      0,
      1,
      2,
      3,
      4,
      5,
    ],
    "prop": null,
  },
]
`;

exports[`Revising an array: unshift() emits proper changes 1`] = `
Array [
  Object {
    "newValue": 1,
    "oldValue": 0,
    "prop": "0",
  },
  Object {
    "newValue": 2,
    "oldValue": undefined,
    "prop": "1",
  },
  Object {
    "newValue": 0,
    "oldValue": undefined,
    "prop": "2",
  },
  Object {
    "newValue": 3,
    "oldValue": 1,
    "prop": "length",
  },
  Object {
    "newValue": Array [
      1,
      2,
      0,
    ],
    "oldValue": Array [
      0,
    ],
    "prop": null,
  },
]
`;

exports[`Watching arrays: can watch an index 1`] = `
Array [
  Object {
    "newValue": 2,
    "oldValue": 1,
    "prop": null,
  },
  Object {
    "newValue": undefined,
    "oldValue": 2,
    "prop": null,
  },
]
`;

exports[`Watching arrays: can watch the length property 1`] = `
Array [
  Object {
    "newValue": 3,
    "oldValue": 1,
    "prop": null,
  },
  Object {
    "newValue": 0,
    "oldValue": 3,
    "prop": null,
  },
]
`;
